# rts-berserk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: ai-architecture.md  beta-roadmap.md  cpp-migration.md  environment-kit.md  research-brief.md  strategic-map-layout.md  world-art-direction.md  world-bible.md
native/: CMakeLists.txt
native/benchmark/: SelfPlay.cpp
native/include/ashen/benchmark/: SelfPlay.hpp
native/include/ashen/core/: Catalog.hpp  Simulation.hpp  Types.hpp
native/tests/: CommanderAITests.cpp  FactionAITests.cpp  InfluenceMapTests.cpp  SelfPlayTests.cpp  SimulationTests.cpp
native/tools/: headless_main.cpp  parity_runner.cpp  self_play_main.cpp
parity/: parity.test.ts  scenarios.ts
scripts/: visual-qa.mjs
src/: main.ts  style.css
src/game/: GameScene.ts  RtsThreeEngine.ts  catalog.ts  map.ts  navigation.ts  simulation.test.ts  simulation.ts  story.ts  technology.ts  types.ts
unreal/AshenDominion/: AshenDominion.uproject
unreal/AshenDominion/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
unreal/AshenDominion/Content/: .gitkeep
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Architecture/: SM_BridgeIron_A.uasset  SM_BridgeTimber_A.uasset  SM_MineMouth_A.uasset  SM_MineTimber_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Factions/Human/: SM_HumanBanner_A.uasset  SM_HumanFoundation_A.uasset  SM_HumanRoof_A.uasset  SM_HumanTower_A.uasset  SM_HumanTrim_A.uasset  SM_HumanWall_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Factions/Veiled/: SM_BonePalisade_A.uasset  SM_Mass_A.uasset  SM_Rib_A.uasset  SM_Sinew_A.uasset  SM_Spike_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Foliage/: SM_BroadleafCanopy_A.uasset  SM_ConiferCrownShadow_A.uasset  SM_ConiferCrown_A.uasset  SM_DeadBranch_A.uasset  SM_ForestRoot_A.uasset  SM_GrassTuft_A.uasset  SM_Reed_A.uasset  SM_TreeTrunk_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Mythic/: SM_MythicArch_A.uasset  SM_RitualStone_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Props/: SM_BrazierBowl_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Road/: SM_RoadBed_A.uasset  SM_RoadRut_A.uasset  SM_RoadStone_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/Rock/: SM_FieldRock_A.uasset  SM_MountainCliff_A.uasset  SM_RiverBank_A.uasset
unreal/AshenDominion/Content/Art/Environment/VowfallKit/Meshes/VFX/: SM_EmberCore_A.uasset
unreal/AshenDominion/Content/Art/Materials/: M_VowfallSurface.uasset  M_VowfallWater.uasset
unreal/AshenDominion/Source/: AshenDominion.Target.cs  AshenDominionEditor.Target.cs  AshenDominionServer.Target.cs
unreal/AshenDominion/Source/AshenCore/: AshenCore.Build.cs
unreal/AshenDominion/Source/AshenCore/Private/: AIDecision.cpp  AIDoctrine.cpp  AIInfluenceMap.cpp  AIMicroLayer.cpp  AIPlanning.cpp  AIPlanningInternal.hpp  AIStrategicLayer.cpp  AITacticalLayer.cpp  AshenCoreModule.cpp  Catalog.cpp  CommanderAI.cpp  PlayerObservation.cpp  Simulation.cpp  VisibilityGrid.cpp
unreal/AshenDominion/Source/AshenCore/Public/ashen/core/: AIDecision.hpp  AIDoctrine.hpp  AIInfluenceMap.hpp  Catalog.hpp  CommanderAI.hpp  PlayerObservation.hpp  Simulation.hpp  Types.hpp  VisibilityGrid.hpp
unreal/AshenDominion/Source/AshenDominion/: AshenDominion.Build.cs
unreal/AshenDominion/Source/AshenDominion/Private/: AshenArena.cpp  AshenCameraPawn.cpp  AshenControlPointActor.cpp  AshenDominion.cpp  AshenEntityActor.cpp  AshenEnvironmentKit.cpp  AshenGameMode.cpp  AshenHUD.cpp  AshenMaterials.cpp  AshenMaterials.h  AshenPlayerController.cpp  AshenResourceActor.cpp  AshenSimulationSubsystem.cpp
unreal/AshenDominion/Source/AshenDominion/Private/Tests/: AshenCoreIntegrationTests.cpp
unreal/AshenDominion/Source/AshenDominion/Public/: AshenArena.h  AshenCameraPawn.h  AshenControlPointActor.h  AshenEntityActor.h  AshenEnvironmentKit.h  AshenGameMode.h  AshenHUD.h  AshenPlayerController.h  AshenResourceActor.h  AshenSimulationSubsystem.h  AshenTypes.h  AshenWorldLayout.h
